  (LP #811107)

- Hook up the `generate_stats` script for use with karlserve. (LP #812444)

- Added onChange handlers for the author and tags fields on the search results
  page to automatically submit their respective forms.  (LP #784257)

- Added versioning and trash folder for Wiki Pages using Shane's 'repozitory'.
  Merged from 'branches/rossi_repozitory'.

3.68 (2011-07-14)
-----------------

- Made agility use simplejson instead of the stdlib json module for
  compatability with Python 2.5.  simplejson is already in use elsewhere in
  the application.

- Fixed bug where replacing a file via the Edit File form would fail to check
  if a file changed from an image file to a non-image file or vice versa.
  (LP #807478)

- Mailed in content now gets a created timestamp set from the Date header of
  the incoming email instead of the current time. (LP #806066)

- Scrubbed the double parentheses from wiki links in search results for wiki
  pages.  (LP #809969)

- Fixed ie7 issue where adding in (un)ordered lists in tinymce was broken.

- Display custom search results based on content type (LP #792333)

3.67 (2011-06-30)
-----------------

- On file view, show last modified user and time also.

- Make sure inactive users aren't emailed by the email blast tool.
  (LP #771888)

- Wikis will now grow a new front_page if the existing front_page is removed.
  (LP #773480)

- Handle case of user uploading two images with identical names via
  imagedrawer. (LP #779870)

- Unified the search types seen on the search results page with the search
  categories used in live search.  Added a 'Reference Manuals' search.  Merged
  from branches/rossi_search_unification.
  (LP # 784222)

- Changed the workflow for intranet content so that content is owned by the
  organization rather than by individual authors.  (LP #798850)

- Created a new 'email' permission and new group, 'group.KarlCommunications' in
  order to allow select non-administrators to send bulk email from Karl.