@@ -10,7 +10,7 @@
 # WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 # General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License along
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
@@ -44,7 +44,7 @@ class Converter(BaseConverter):
             encoding = mo.group(1)
         doc = unicode(doc, encoding, 'replace')
         doc = convert_entities(doc)
-        result = html2text(doc)
+        result = convert_entities(html2text(doc))
 
         # convert back to utf-8
         return StringIO.StringIO(result.encode('utf-8')), 'utf-8'
